...
    <string name="pw1_label">Passwort</string>
    <string name="pw2_label">Passwort wiederholen</string>

    <string name="profile_title">Profil</string>
    <string name="profile_qr_info">Mit diesem QR-Code können Sie von Buddys hinzugefügt werden</string>

    <string name="buddy_title">Buddy%s</string>
    <string name="buddy_no_messages">Ihr habt noch nicht an euch gedacht</string>

    <string name="buddies_loaded">Buddys geladen</string>
    <string name="buddies_title">Buddys</string>
    <string name="no_buddies">Du hast keine Freunde</string>
    <string name="no_buddy_found">Kein Buddy gefunden</string>
    <string name="select_time">Cooldown wählen</string>
    <string name="cooldown_receiving">Buddy kann dir alle %s Nachrichten senden ></string>
    <string name="cooldown_sending">Buddy kann alle %s Nachrichten bekommen</string>
    <string name="cooldown_receiving_always">Buddy kann dir jederzeit Nachrichten senden ></string>
    <string name="cooldown_sending_always">Buddy kann jederzeit Nachrichten bekommen</string>

    <string name="scan_title">Scan</string>
    <string name="grant_permission">Berechtigung erteilen</string>
    <string name="camera_permission_declined">Sie haben die Berechtigung für die Kamera permanent abgelehnt./nSie können in die Appeinstellungen gehen um Berechtigung zu geben.</string>
    <string name="camera_permission_asking">Um einen QR Code zu scannen, wird die Berechtigung die Kamera zu nutzen benötigt.</string>
    <string name="permission_needed">Berechtigung benötigt</string>
...
